--- a/index.html
+++ b/index.html
@@ -42,6 +42,36 @@ button:hover {
     display: inline-block;
 }
 
+    input[type="number"] {
+    width: 60px;
+    padding: 8px;
+    font-size: 16px;
+    font-weight: 500;
+    text-align: center;
+    border: 2px solid #ff758c;
+    border-radius: 20px;
+    outline: none;
+    transition: 0.3s;
+    background: white;
+    color: #333;
+}
+
+input[type="number"]:focus {
+    border-color: #ff7eb3;
+    box-shadow: 0px 4px 8px rgba(255, 120, 150, 0.3);
+}
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+    opacity: 0.5;
+    transition: 0.3s;
+}
+
+input[type="number"]:hover::-webkit-inner-spin-button,
+input[type="number"]:hover::-webkit-outer-spin-button {
+    opacity: 1;
+}
+
 table {
     border-collapse: collapse;
     background: white;
@@ -62,7 +92,7 @@ td {
 }
 
 td:hover {
-    transform: scale(1.1);
+    transform: scale(0.95);
     background-color: rgba(255, 120, 150, 0.3);
 }
 
