--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     </style>
 </head>
 <body>
-<h1>Crown Puzzle</h1>
+<h1>♾️ Queens Puzzles</h1>
 Size: <input type="number" id="size" value="8" min="4" max="11">
 <button id="newGame">New Game</button>
 <button id="showSolution">Show Solution</button>
